# FantasyRankings

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: python-app-baseball.yml  python-app-basketball.yml  python-app-hockey.yml  python-app.yml
docs/: FantasyProsBaseballDraft.md  FantasyProsBaseballDraft.xlsx  FantasyProsBasketballDraft.md  FantasyProsBasketballDraft.xlsx  FantasyProsFootballDraft.md  FantasyProsFootballDraft.xlsx  FantasyProsFootballDraftHALF_PPR.md  FantasyProsFootballDraftPPR.md  FantasyProsFootballDraftSTD.md  FantasyProsHockeyDraft.md  FantasyProsHockeyDraft.xlsx  readme.json
fantasy_rankings/: player.py  rank.py  toc.py  util.py
fantasy_rankings/baseball/: baseball.py  fantasy_pros.py
fantasy_rankings/basketball/: basketball.py  fantasy_pros.py
fantasy_rankings/football/: fantasy_pros.py  football.py
fantasy_rankings/hockey/: fantasy_pros.py  hockey.py
fantasy_rankings/templates/: README.md.template  markdown.py  md.j2
