[metadata]
author = Brent Barbachem
author_email = barbacbd@dukes.jmu.edu
maintainer = Brent Barbachem
maintainer_email = barbacbd@dukes.jmu.edu
name = fantasy_rankings
version = 0.0.1
description = The package provides fantasy ranking information to assist on draft day.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = football, fantasy, sports, scrape
license = MIT
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/barbacbd/FantasyRankings

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    bs4
    requests
    pandas
    xlsxwriter
    jinja2
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    pylint
    pytest-order
python_requires = >=3.6, <4

[options.package_data]
* = *.j2

[options.packages.find]
exclude =
    scripts*
    tests*
    user*
